# GDKafka-Addon

./: .gitattributes  .gitignore  .gitmodules  .releaserc.yaml  CHANGELOG.md  CMakeLists.txt  CODE-STANDARDS.md  Compose.yaml  LICENSE  SConstruct  _build.bat  _vs.bat  asset-description.md  asset-package.json
.github/scripts/: godot-library-post.js
.github/workflows/: package.yaml
lib/includes/: kafkalib.hpp
lib/src/: kafkalib.cpp
project/includes/: godot_register.hpp  kafka_peer.hpp
project/src/: godot_register.cpp  kafka_peer.cpp
templates/godot-4x/: godot-kafka.gdextension
tests/: CMakeLists.txt
tests/basic-consumer-producer/: main.cpp
